--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ block-classes:
   - padded-1
   - padded-2
   - padded-5p
+  - padded-tall
   - border-center
   - bg-split-white-tan
   - bg-split-tan-white
